feat : add find by id client
