# internal/pkg/http/routes/client.go
@@ -15,5 +15,6 @@ func ClientRoutes(conn *sql.DB, r *gin.RouterGroup) {
 
 	clientGroup.POST("", clientHandler.CreateClient)
 	clientGroup.GET("", clientHandler.FindAllClients)
+	clientGroup.GET("/:id", clientHandler.FindClientById)
 
 }
